Display tos-function-changes in case-file, tweak layout

--- a/resources/private/application/case-file-template.html
+++ b/resources/private/application/case-file-template.html
@@ -9,16 +9,14 @@
       <thead>
       <tr>
         <th data-bind="ltext: 'caseFile.action'"></th>
-        <th data-bind="ltext: 'applications.operation'"></th>
-        <th data-bind="ltext: 'document'"></th>
+        <th data-bind="ltext: 'caseFile.event'"></th>
         <th data-bind="ltext: 'caseFile.documentDate'"></th>
-        <th data-bind="ltext: 'lisaaja'"></th>
+        <th data-bind="ltext: 'user'"></th>
       </tr>
       </thead>
       <tbody data-bind="foreach: caseFile">
       <tr>
         <td data-bind="text: action"></td>
-        <td></td>
         <td></td>
         <td data-bind="dateString: start"></td>
         <td data-bind="text: user"></td>
@@ -27,18 +25,20 @@
       <tr>
         <td></td>
         <td>
-          <div data-bind="if: category == 'document'"><span data-bind="ltext: 'application.applicationSummary'"></span></div>
-          <div data-bind="if: category == 'attachment'"><span data-bind="ltext: 'document'"></span></div>
-          <div data-bind="if: category == 'request-statement'"><span data-bind="ltext: 'caseFile.operation.statement.request'"></span></div>
-          <div data-bind="if: category == 'request-neighbor'"><span data-bind="ltext: 'caseFile.operation.neighbor.request'"></span></div>
-          <div data-bind="if: category == 'request-review'"><span data-bind="ltext: 'caseFile.operation.review.request'"></span></div>
-          <div data-bind="if: category == 'review'"><span data-bind="ltext: 'caseFile.operation.review'"></span></div>
-        </td>
-        <td>
-          <div data-bind="ifnot: category == 'attachment'"><span data-bind="text: type"></span></div>
-          <div data-bind="if: category == 'attachment'">
+          <span class="event-title">
+            <span data-bind="if: category == 'document'"><span data-bind="ltext: 'caseFile.documentSubmitted'"></span>:</span>
+            <span data-bind="if: category == 'request-statement'"><span data-bind="ltext: 'caseFile.operation.statement.request'"></span>:</span>
+            <span data-bind="if: category == 'request-neighbor'"><span data-bind="ltext: 'caseFile.operation.neighbor.request'"></span>:</span>
+            <span data-bind="if: category == 'request-review'"><span data-bind="ltext: 'caseFile.operation.review.request'"></span>:</span>
+            <span data-bind="if: category == 'review'"><span data-bind="ltext: 'caseFile.operation.review'"></span>:</span>
+            <span data-bind="if: category == 'tos-function-change'"><span data-bind="ltext: 'caseFile.tosFunctionChange'"></span>:</span>
+          </span>
+
+          <span data-bind="if: $data.text"><span data-bind="text: text"></span></span>
+          <span data-bind="if: _.isString($data.type)"><span data-bind="ltext: type"></span></span>
+          <span data-bind="if: _.isObject($data.type)">
             <span data-bind="text: loc(['attachmentType', type['type-group'], type['type-id']])"></span><span data-bind="if: contents">, <span data-bind="text: contents"></span></span>, v. <span data-bind="version: version"></span>
-          </div>
+          </span>
         </td>
         <td data-bind="dateString: ts"></td>
         <td data-bind="text: $data.user"></td>
