Help toggle fixes.
Removing float makes the inadvertent animation disappear.

--- a/resources/private/neighbors/neighbors.html
+++ b/resources/private/neighbors/neighbors.html
@@ -11,7 +11,7 @@
       </span>
 
       <div style="margin-top: 5px" >
-      <h1 data-bind="lhtml: 'application.' + permitType() + '.neighbors'" style="float:left; line-height: normal"></h1>
+      <h1 data-bind="lhtml: 'application.' + permitType() + '.neighbors'" class="help-adjacent-title"></h1>
       <span data-bind="component: {name: 'help-toggle', params: {show: true, lhtml: ['help.neighbors.map.p1', 'help.neighbors.map.p2']}}"></span>
       </div>
 
