--- a/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
+++ b/resources/private/ui-components/docgen/repeating-group/docgen-repeating-group-template.html
@@ -31,7 +31,8 @@
                                                  i18npath: $component.i18npath,
                                                  applicationId: $component.applicationId,
                                                  documentId: $component.documentId,
-                                                 authModel: $component.authModel }}">
+                                                 authModel: $component.authModel,
+                                                 service: $component.service }}">
           </div>
         </div>
       </div>
