Add option for admin to impersonate archvist role for an organization

--- a/resources/private/admin/organizations.html
+++ b/resources/private/admin/organizations.html
@@ -69,6 +69,10 @@
               <input type="radio" name="role" value="authorityAdmin" data-bind="checked: role" id="impersonateAuthorityAdmin">
               <label data-bind="ltext: 'authorityAdmin'" for="impersonateAuthorityAdmin"></label>
             </div>
+            <div>
+              <input type="radio" name="role" value="archivist" data-bind="checked: role" id="impersonateArchvist">
+              <label data-bind="ltext: 'authorityrole.archivist'" for="impersonateArchvist"></label>
+            </div>
 
             <div>
               <label class="form-label" for="login-as-password" data-bind="ltext: 'admin.admin-password'"></label>
