--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -374,13 +374,13 @@
                                    class="link-btn">
                                     <span data-bind="ltext: 'application.applicationSummary'"></span></a></li>
 
-                            <li data-bind="if: !_.isEmpty(metadata()) && $root.authorization.ok('permanent-archive-enabled') && features.enabled('arkistointi') && $root.authorization.ok('archive-documents') && $root.application.inPostVerdictState(),
+                            <li data-bind="if: !_.isEmpty(metadata()) && $root.authorization.ok('permanent-archive-enabled') && features.enabled('arkistointi') && $root.authorization.ok('archiving-operations-enabled') && $root.application.inPostVerdictState(),
                                            css: {'active': $parent.selectedTabName() === 'archival'}">
                                 <a data-bind="click: changeTab" href="#" data-target="archival" data-test-id="application-open-archival-tab" class="link-btn">
                                     <span data-bind="ltext: 'arkistointi'"></span>
                                 </a></li>
 
-                            <li data-bind="if: tosFunction() && $root.authorization.ok('permanent-archive-enabled') && $root.authorization.ok('store-tos-metadata-for-process'),
+                            <li data-bind="if: tosFunction() && $root.authorization.ok('permanent-archive-enabled') && $root.authorization.ok('tos-operations-enabled'),
                                              css: {'active': $parent.selectedTabName() === 'caseFile'}">
                               <a data-bind="click: changeTab" href="#" data-target="caseFile" data-test-id="application-open-caseFile-tab" class="link-btn">
                                 <span data-bind="ltext: 'caseFile.tab'"></span>
@@ -871,7 +871,7 @@
 
                     <!-- Archival tab -->
 
-                    <!--ko if: selectedTabName() === 'archival' && features.enabled('arkistointi') && $root.authorization.ok("permanent-archive-enabled") && $root.application.inPostVerdictState() && $root.authorization.ok('archive-documents')-->
+                    <!--ko if: selectedTabName() === 'archival' && features.enabled('arkistointi') && $root.authorization.ok("permanent-archive-enabled") && $root.application.inPostVerdictState() && $root.authorization.ok('archiving-operations-enabled') -->
                     <div id="application-archival-tab" class="tab-content">
                       <div>
                         <div data-bind="component: {name: 'archival-summary', params: {application: application}}"></div>
@@ -879,7 +879,7 @@
                     </div>
                     <!-- /ko -->
 
-                    <!--ko if: selectedTabName() === 'caseFile' && $root.authorization.ok("permanent-archive-enabled") && $root.authorization.ok('store-tos-metadata-for-process') -->
+                    <!--ko if: selectedTabName() === 'caseFile' && $root.authorization.ok("permanent-archive-enabled") && $root.authorization.ok('tos-operations-enabled') -->
                     <div id="application-caseFile-tab" class="tab-content">
                       <div>
                         <div data-bind="component: {name: 'case-file', params: {application: application}}"></div>
