--- a/resources/private/ui-components/docgen/maaraala-tunnus/maaraala-tunnus-template.html
+++ b/resources/private/ui-components/docgen/maaraala-tunnus/maaraala-tunnus-template.html
@@ -7,13 +7,14 @@
       <span class="kiintun-and-maaraalatunnus">
         <span class="form-maaraala" data-bind="propertyId: propertyId"></span>
         <span data-bind="visible: isMaaraala">-M</span>
-        <span data-bind="component: {name: 'docgen-inline-string',
+        <span data-bind="component: {name: 'docgen-input',
                                      params: { schema: schema,
                                                applicationId: applicationId,
                                                documentId: documentId,
                                                path: path,
                                                isDisabled: isDisabled,
-                                               authModel: authModel }},
+                                               authModel: authModel,
+                                               template: 'docgen-inline-string-template'}},
                          style: {visibility: visibilityState}"></div>
       </span>
     </script>
