--- a/resources/private/ui-components/docgen/button/docgen-button-template.html
+++ b/resources/private/ui-components/docgen/button/docgen-button-template.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html>
-<body>
-  <section class="page container">
-    <script type="text/x-jquery-tmpl" id="docgen-button-template">
-        <button data-bind="attr: { 'id': id, 'class': className, 'data-test-id': testId },
-                           click: clickFn">
-            <!-- ko if: icon -->
-            <i data-bind="attr: { 'class': icon }"></i>
-            <!-- /ko -->
-            <span data-bind="ltext: label"></span>
-        </button>
-    </script>
-  </section>
-</body>
-</html>
+<script class="ko-template" type="text/x-jquery-tmpl" id="docgen-button-template">
+    <button data-bind="attr: { 'id': id, 'class': className, 'data-test-id': testId },
+                       click: clickFn">
+        <!-- ko if: icon -->
+        <i data-bind="attr: { 'class': icon }"></i>
+        <!-- /ko -->
+        <span data-bind="ltext: label"></span>
+    </button>
+</script>
