--- a/resources/private/ui-components/docgen/table/docgen-table-template.html
+++ b/resources/private/ui-components/docgen/table/docgen-table-template.html
@@ -1,71 +1,69 @@
-<!DOCTYPE html>
-<html>
-<body>
-  <section class="page container">
-    <script type="text/x-jquery-tmpl" id="docgen-table-template">
-      <div class="form-table" data-bind="attr: {id: groupId}">
+<script class="ko-template" type="text/x-jquery-tmpl" id="docgen-table-template">
+  <div class="iniline" data-bind="template: componentTemplate"></div>
+</script>
 
-        <label class="form-label form-label-table" data-bind="ltext: groupLabel"></label>
+<script class="ko-template" type="text/x-jquery-tmpl" id="default-docgen-table-template">
+  <div class="form-table" data-bind="attr: {id: groupId}">
 
-        <!-- ko if: groupHelp -->
-        <span class="group-help-text" data-bind="ltext: groupHelp"></span>
-        <!-- /ko -->
+    <label class="form-label form-label-table" data-bind="ltext: groupLabel"></label>
 
-        <table data-bind="attr: {'class': _.last(path) + '-table'}">
-          <thead>
-            <tr data-bind="foreach: columnHeaders">
-              <th>
-                <span data-bind="ltext: name"></span>
-                <span data-bind="visible: required">*</span>
-              </th>
-            </tr>
-          </thead>
-          <tbody data-bind="foreach: groups">
-            <tr data-bind="attr: { 'id': $component.groupId + '-row-' + index , 'data-test-id': $component.schemaName + '-row-' + index}">
-              <!-- ko foreach: $component.subSchemas -->
-              <td>
-                <span class="form-entry form-input"
-                  data-bind="component: { name: uicomponent,
-                                          params: { schema: $data,
-                                                    path: $parent.path.concat(name),
-                                                    i18npath: i18npath,
-                                                    applicationId: applicationId,
-                                                    documentId: documentId,
-                                                    authModel: $component.authModel }}">
-                </span>
-              </td>
-              <!-- /ko -->
+    <!-- ko if: groupHelp -->
+    <span class="group-help-text" data-bind="ltext: groupHelp"></span>
+    <!-- /ko -->
 
-              <td class="action-column">
-                <i class="lupicon-remove primary" data-bind="click: $component.removeGroup,
-                                                             visible: $component.groupsRemovable($data.schema),
-                                                             attr: {'data-test-class': 'delete-schemas.' + $data.schema.name}"></i>
-              </td>
+    <table data-bind="attr: {'class': _.last(path) + '-table'}">
+      <thead>
+        <tr data-bind="foreach: columnHeaders">
+          <th>
+            <span data-bind="ltext: name"></span>
+            <span data-bind="visible: required">*</span>
+          </th>
+        </tr>
+      </thead>
+      <tbody data-bind="foreach: groups">
+        <tr data-bind="attr: { 'id': $component.groupId + '-row-' + index , 'data-test-id': $component.schemaName + '-row-' + index}">
+          <!-- ko foreach: $component.subSchemas -->
+          <td>
+            <span class="form-entry form-input"
+              data-bind="component: { name: uicomponent,
+                                      params: { schema: $data,
+                                                path: $parent.path.concat(name),
+                                                i18npath: i18npath,
+                                                applicationId: applicationId,
+                                                documentId: documentId,
+                                                authModel: $component.authModel }}">
+            </span>
+          </td>
+          <!-- /ko -->
 
-            </tr>
-          </tbody>
-        </table>
-      </div>
+          <td class="action-column">
+            <i class="lupicon-remove primary" data-bind="click: $component.removeGroup,
+                                                         visible: $component.groupsRemovable($data.schema),
+                                                         attr: {'data-test-class': 'delete-schemas.' + $data.schema.name}"></i>
+          </td>
 
-      <div class="button-group" data-bind="visible: updatable()">
-        <span data-bind="component: { name: 'docgen-button',
-                                     params: { id: groupId + '-append-button',
-                                               className: 'positive',
-                                               icon: 'lupicon-circle-plus',
-                                               label: appendLabel,
-                                               clickFn: addGroup,
-                                               testId: schemaName + '-append-button' }}">
-        </span>
-        <span data-bind="component: { name: 'docgen-button',
-                                     params: { id: groupId + '-copy-button',
-                                               className: 'secondary',
-                                               icon: 'lupicon-circle-plus',
-                                               label: copyLabel,
-                                               clickFn: duplicateLastGroup,
-                                               testId: schemaName + '-copy-button' }}">
-        </span>
-      </div>
-    </script>
-  </section>
-</body>
-</html>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="button-group" data-bind="visible: updatable()">
+    <span data-bind="component: { name: 'docgen-button',
+                                 params: { id: groupId + '-append-button',
+                                           className: 'positive',
+                                           icon: 'lupicon-circle-plus',
+                                           label: appendLabel,
+                                           clickFn: addGroup,
+                                           testId: schemaName + '-append-button' }}">
+    </span>
+    <span data-bind="component: { name: 'docgen-button',
+                                 params: { id: groupId + '-copy-button',
+                                           className: 'secondary',
+                                           icon: 'lupicon-circle-plus',
+                                           label: copyLabel,
+                                           clickFn: duplicateLastGroup,
+                                           testId: schemaName + '-copy-button' }}">
+    </span>
+  </div>
+</script>
+
