use .form-label and validation result classes in docgen component labels

--- a/resources/private/ui-components/docgen/input/docgen-checkbox-template.html
+++ b/resources/private/ui-components/docgen/input/docgen-checkbox-template.html
@@ -1,7 +1,7 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="docgen-checkbox-template">
   <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
   <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
-  <label data-bind="visible: label, ltext: label"></label>
+  <label class="form-label" data-bind="visible: label, ltext: label, css: classes"></label>
   <input type="checkbox" data-bind="checked: value,
                                     disable: disabled() || readonly()" />
   <span data-bind="saveIndicator: indicator, label: false"></span>
