--- a/resources/private/ui-components/docgen/input/docgen-localized-string-template.html
+++ b/resources/private/ui-components/docgen/input/docgen-localized-string-template.html
@@ -1,7 +1,7 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="docgen-localized-string-template">
   <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
   <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
-  <label data-bind="visible: label, ltext: label"></label>
+  <label class="form-label" data-bind="visible: label, ltext: label, css: classes"></label>
   <span class="form-string"
            type="text"
            data-bind="ltext: value() && schema.locPrefix + '.' + value(),
