--- a/resources/private/ui-components/docgen/select/docgen-select-template.html
+++ b/resources/private/ui-components/docgen/select/docgen-select-template.html
@@ -5,7 +5,7 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="default-docgen-select-template">
   <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
   <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
-  <label data-bind="visible: label, ltext: label"></label>
+  <label class="form-label" data-bind="visible: label, ltext: label, css: classes"></label>
   <select class="form-input combobox" data-bind="options: schema.body,
                      optionsText: optionsTextFn,
                      optionsValue: 'name',
