--- a/resources/private/ui-components/docgen/date/docgen-date-template.html
+++ b/resources/private/ui-components/docgen/date/docgen-date-template.html
@@ -6,7 +6,7 @@
 
   <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
   <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
-  <label data-bind="visible: label, ltext: label"></label>
+  <label class="form-label" data-bind="visible: label, ltext: label, css: classes"></label>
   <span>
     <input class="form-input"
            type="text"
