--- a/resources/private/task/task.html
+++ b/resources/private/task/task.html
@@ -30,7 +30,17 @@
       <div data-bind="template: {name: 'targetted-attachments-template', data: {attachmentsModel: $root.attachmentsModel, authorization: $root.authorization}}"></div>
     </div>
 
-    <div id="taskDocgen" class="docgen-content" ></div>
+    <!--<div id="taskDocgen" class="docgen-content" ></div>-->
+    <!-- ko if: lupapisteApp.models.rootVMO.currentPage() === 'task' -->
+     <div data-bind="component: {name: 'docgen-group',
+                                 params: {schema: $data.schema,
+                                          path: [],
+                                          applicationId: $data.applicationId,
+                                          documentId: $data.id,
+                                          service: $root.taskDataService,
+                                          authModel: lupapisteApp.models.applicationAuthModel,
+                                          i18npath: ['task-katselmus']}}"></div>
+    <!-- /ko -->
   </section>
 </body>
 </html>
