--- a/resources/private/ui-components/applications-search/applications-foreman-search-filter-template.html
+++ b/resources/private/ui-components/applications-search/applications-foreman-search-filter-template.html
@@ -5,16 +5,16 @@
     <script type="text/x-jquery-tmpl" id="applications-foreman-search-filter-template">
     <div class="form-grid form-grid--no-border">
       <div class="row">
-        <div class="col-1">
+        <div class="col-2">
           <label data-bind="ltext: 'application.filter.search'"></label>
           <div class="search" data-bind="css: {toggled: dataProvider.searchField(), active: searchFieldSelected}">
-            <input type="text" data-bind="attr: {placeholder: loc('application.filter.search.placeholder')}, textInput: dataProvider.searchField, hasFocus: searchFieldSelected"/>
+            <input type="text" data-bind="attr: {placeholder: loc('application.foreman.filter.search.placeholder')}, textInput: dataProvider.searchField, hasFocus: searchFieldSelected"/>
             <i class="search-icon lupicon-search"></i>
             <i class="search-icon lupicon-remove toggle" data-bind="click: _.partial(dataProvider.searchField, ''), attr: {title: loc('applications.filter.search.clear')}"></i>
           </div>
         </div>
         <!-- ko if: lupapisteApp.models.currentUser.isAuthority() -->
-        <div class="col-2">
+        <div class="col-1">
           <label data-bind="ltext: 'application.filter.search.select.saved.filter'"></label>
           <div data-test-id="select-advanced-filter" data-bind="component: {name: 'autocomplete-saved-filters', params: {lPlaceholder: 'application.filter.search.placeholder.saved-filter', foreman: true}}"></div>
         </div>
