--- a/resources/private/ui-components/docgen/date/docgen-date-template.html
+++ b/resources/private/ui-components/docgen/date/docgen-date-template.html
@@ -6,12 +6,11 @@
 
   <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
   <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
-  <label class="form-label" data-bind="visible: label, ltext: label, css: classes"></label>
+  <label data-bind="visible: label, ltext: label, css: labelClasses"></label>
   <span>
-    <input class="form-input"
-           type="text"
+    <input type="text"
            data-bind="textInput: value,
-                      css: classes,
+                      css: inputClasses,
                       event: events,
                       disable: disabled,
                       attr: { readonly: readonly,
