--- a/resources/private/ui-components/docgen/input/docgen-inline-string-template.html
+++ b/resources/private/ui-components/docgen/input/docgen-inline-string-template.html
@@ -1,11 +1,10 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="docgen-inline-string-template">
   <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
   <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
-  <label class="form-label" data-bind="visible: label, ltext: label, css: classes"></label>
-  <input class="form-input inline"
-         type="text"
+  <label data-bind="visible: label, ltext: label, css: labelClasses"></label>
+  <input type="text"
          data-bind="textInput: value,
-                    css: classes,
+                    css: inputClasses,
                     event: events,
                     disable: disabled,
                     attr: { 'readonly': readonly,
