--- a/resources/private/ui-components/docgen/input/docgen-localized-string-template.html
+++ b/resources/private/ui-components/docgen/input/docgen-localized-string-template.html
@@ -1,13 +1,12 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="docgen-localized-string-template">
   <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
   <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
-  <label class="form-label" data-bind="visible: label, ltext: label, css: classes"></label>
-  <span class="form-string"
-           type="text"
-           data-bind="ltext: value() && schema.locPrefix + '.' + value(),
-                      css: classes,
-                      event: events,
-                      attr: { 'data-test-id': path.join('.') }">
+  <label data-bind="visible: label, ltext: label, css: labelClasses"></label>
+  <span type="text"
+        data-bind="ltext: value() && schema.locPrefix + '.' + value(),
+                   css: inputClasses,
+                   event: events,
+                   attr: { 'data-test-id': path.join('.') }">
   </span>
   <span data-bind="saveIndicator: indicator"></span>
 </script>
