--- a/resources/private/ui-components/docgen/input/docgen-text-template.html
+++ b/resources/private/ui-components/docgen/input/docgen-text-template.html
@@ -1,10 +1,9 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="docgen-text-template">
   <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
   <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
-  <label class="form-label" data-bind="visible: label, ltext: label, css: classes"></label>
-    <textarea class="form-input textarea"
-              data-bind="textInput: value,
-                         css: classes,
+  <label data-bind="visible: label, ltext: label, css: labelClasses"></label>
+    <textarea data-bind="textInput: value,
+                         css: inputClasses,
                          event: events,
                          disable: disabled,
                          attr: { 'readonly': readonly,
