--- a/resources/private/ui-components/docgen/select/docgen-select-template.html
+++ b/resources/private/ui-components/docgen/select/docgen-select-template.html
@@ -5,15 +5,15 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="default-docgen-select-template">
   <message-panel params="class: 'errorPanel', show: showMessagePanel, message: errorMessage"></message-panel>
   <message-panel params="class: 'form-help', show: showMessagePanel, message: helpMessage"></message-panel>
-  <label class="form-label" data-bind="visible: label, ltext: label, css: classes"></label>
-  <select class="form-input combobox" data-bind="options: schema.body,
+  <label data-bind="visible: label, ltext: label, css: labelClasses"></label>
+  <select data-bind="options: schema.body,
                      optionsText: optionsTextFn,
                      optionsValue: 'name',
                      value: value,
                      valueAllowUnset: valueAllowUnset,
                      optionsCaption: optionsCaption,
                      disable: disabled() || readonly(),
-                     css: classes,
+                     css: inputClasses,
                      event: events,
                      attr: {'data-test-id': path.join('.')}">
   </select>
