--- a/resources/private/task/task.html
+++ b/resources/private/task/task.html
@@ -36,7 +36,7 @@
     </div>
 
     <div id="taskAttachments" >
-      <div data-bind="template: {name: 'targetted-attachments-template', data: {attachmentsModel: $root.attachmentsModel, authorization: $root.authorization}}"></div>
+      <div data-bind="template: {name: 'targetted-attachments-template', data: {attachmentsModel: $root.attachmentsModel, addAttachmentDisabled: $root.addAttachmentDisabled, authorization: $root.authorization}}"></div>
     </div>
 
     <div id="taskDocgen" class="docgen-content" ></div>
