--- a/resources/private/task/task.html
+++ b/resources/private/task/task.html
@@ -23,11 +23,6 @@
           <span data-bind="ltext: 'task.send'"></span>
       </button>
 
-      <!-- ko if: features.enabled("review-done") -->
-      <div class="feature" style="display:inline-block">
-      <button data-test-id="review-done" data-bind="ltext: 'task.review-done', click: reviewDone, enable: $root.taskSubmitOk() && !$root.processing(), visible: $root.authorization.ok('review-done')" class="positive"></button>
-      </div>
-      <!-- /ko -->
 
       <button data-test-id="delete-task"
               data-bind="ltext:'remove', click: deleteTask, visible: $root.authorization.ok('delete-task')"
@@ -35,12 +30,24 @@
 
     </div>
 
+    <!-- ko if: features.enabled("review-done") -->
+    <div class="feature" style="display:inline-block">
+      <div class="review-done">
+        <div data-bind="ltext: 'task.review-done.help'"></div>
+        <button data-test-id="review-done" data-bind="click: reviewDone, enable: $root.taskSubmitOk() && !$root.processing(), visible: $root.authorization.ok('review-done')" class="positive">
+          <i class="lupicon-eye"></i>
+          <span data-bind="ltext: 'task.review-done'"></span>
+        </button>
+      </div>
+    </div>
+    <!-- /ko -->
+
     <div id="taskAttachments" >
       <div data-bind="template: {name: 'targetted-attachments-template', data: {attachmentsModel: $root.attachmentsModel, authorization: $root.authorization}}"></div>
     </div>
 
     <!--<div id="taskDocgen" class="docgen-content" ></div>-->
-    <!-- ko if: lupapisteApp.models.rootVMO.currentPage() === 'task' -->
+    <!-- ko if: $data.addedToService -->
      <div data-bind="component: {name: 'docgen-group',
                                  params: {schema: $data.schema,
                                           path: [],
@@ -48,7 +55,7 @@
                                           documentId: $data.id,
                                           service: $root.taskDataService,
                                           authModel: lupapisteApp.models.applicationAuthModel,
-                                          i18npath: ['task-katselmus']}}"></div>
+                                          i18npath: [$data.schema.info.i18name || $data.schema.info.name]}}"></div>
     <!-- /ko -->
   </section>
 </body>
