--- a/resources/private/authority-admin/resources-admin.html
+++ b/resources/private/authority-admin/resources-admin.html
@@ -47,21 +47,17 @@
       <div data-bind="with: $root.calendars.viewCalendarModel">
         <table data-test-id="resources-admin-calendar-weekview-table">
           <thead>
-          <tr>
-            <th>ma</th>
-            <th>ti</th>
-            <th>ke</th>
-            <th>to</th>
-            <th>pe</th>
+          <tr data-bind="foreach: weekdays">
+            <th data-bind="text: text"></th>
           </tr>
           </thead>
-          <tbody data-bind="foreach: allowedCalendarSlots">
-          <tr>
-            <td data-bind="text: time"></td>
-            <td data-bind="text: time"></td>
-            <td data-bind="text: time"></td>
-            <td data-bind="text: time"></td>
-            <td data-bind="text: time"></td>
+          <tbody>
+          <tr data-bind="foreach: weekdays">
+            <td>
+              <div class="resource-calendar-timeline" data-bind="foreach: $root.calendars.viewCalendarModel.timelineTimes">
+                <div class="timeline-slot"><span data-bind="text: $data"></span></div>
+              </div>
+            </td>
           </tr>
           </tbody>
         </table>
