--- a/resources/private/application/case-file-template.html
+++ b/resources/private/application/case-file-template.html
@@ -32,6 +32,7 @@
             <span data-bind="if: category == 'request-review'"><span data-bind="ltext: 'caseFile.operation.review.request'"></span>:</span>
             <span data-bind="if: category == 'review'"><span data-bind="ltext: 'caseFile.operation.review'"></span>:</span>
             <span data-bind="if: category == 'tos-function-change'"><span data-bind="ltext: 'caseFile.tosFunctionChange'"></span>:</span>
+            <span data-bind="if: category == 'tos-function-correction'"><span data-bind="ltext: 'caseFile.tosFunctionCorrection'"></span>:</span>
           </span>
 
           <span data-bind="if: $data.text"><span data-bind="text: text"></span></span>
