--- a/resources/private/template.html
+++ b/resources/private/template.html
@@ -32,7 +32,7 @@
 
     <title>Lupapiste</title>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.2.min.js"></script>
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.11.4/jquery-ui.min.js"></script>
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.10.5/jquery.dataTables.min.js"></script>
     <script type="text/javascript">if (typeof jQuery === "undefined") document.write("<script src='/app/latest/cdn-fallback.js'></" + "script>")</script>
