--- a/resources/public/lp-static/html/upload-1.115.html
+++ b/resources/public/lp-static/html/upload-1.115.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" /><title></title>
   <link rel="stylesheet" href="/lp-static/css/main.css" />
   <link rel="stylesheet" href="/app/latest/upload.css" />
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
+  <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.2.min.js"></script>
   <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.11.4/jquery-ui.min.js"></script>
   <script type="text/javascript">
     var lang = window.parent.loc.getCurrentLanguage();
