--- a/resources/private/task/task.html
+++ b/resources/private/task/task.html
@@ -2,7 +2,7 @@
 <html >
 <body>
   <section class="page container" id="task" data-bind="with: task">
-    <h1><span data-bind="attr: {'class': statusName + ' icon', 'data-test-state': $data.state, 'title': loc(['task', statusName, 'title'])}"></span><span data-bind="text: displayName"></span></h1>
+    <h1><span data-bind="attr: {'data-test-state': $data.state, 'title': loc(['task', statusName, 'title'])}"></span><span data-bind="text: displayName"></span></h1>
     <div class="clear-fix">
       <a class="btn secondary"
          data-bind="click: returnToApplication"
@@ -10,8 +10,10 @@
           <i class="lupicon-chevron-start"></i>
          <span data-bind ="ltext: 'application.return'"></span>
       </a>
+      <!-- ko if: approvable || rejectable -->
       <button data-test-id="approve-task" data-bind="ltext: 'task.approve', click: approve, enable: approvable, visible: $root.authorization.ok('approve-task')" class="positive"></button>
       <button data-test-id="reject-task"  data-bind="ltext: 'task.reject', click: reject, enable: rejectable, visible: $root.authorization.ok('reject-task')" class="negative"></button>
+      <!-- /ko -->
 
       <button data-test-id="send-task"
               data-bind="click: sendTask,
@@ -23,12 +25,6 @@
           <span data-bind="ltext: 'task.send'"></span>
       </button>
 
-      <!-- ko if: features.enabled("review-done") -->
-      <div class="feature" style="display:inline-block">
-      <button data-test-id="review-done" data-bind="ltext: 'task.review-done', click: reviewDone, enable: $root.reviewSubmitOk() && !$root.processing(), visible: $root.authorization.ok('review-done')" class="positive"></button>
-      </div>
-      <!-- /ko -->
-
       <button data-test-id="delete-task"
               data-bind="ltext:'remove', click: deleteTask, visible: $root.authorization.ok('delete-task')"
               class="secondary" style="float:right"></button>
@@ -37,9 +33,11 @@
 
     <!-- ko if: features.enabled("review-done") -->
     <div class="feature" style="display:inline-block">
-      <div class="review-done">
+      <div class="review-done"
+           data-bind="visible: $root.authorization.ok('review-done'),
+                      if: $root.authorization.ok('review-done')">
         <div data-bind="ltext: 'task.review-done.help'"></div>
-        <button data-test-id="review-done" data-bind="click: reviewDone, enable: $root.taskSubmitOk() && !$root.processing(), visible: $root.authorization.ok('review-done')" class="positive">
+        <button data-test-id="review-done" data-bind="click: reviewDone, enable: $root.taskSubmitOk() && !$root.processing()" class="positive">
           <i class="lupicon-eye"></i>
           <span data-bind="ltext: 'task.review-done'"></span>
         </button>
