--- a/resources/private/task/task.html
+++ b/resources/private/task/task.html
@@ -56,7 +56,7 @@
                                           path: [],
                                           applicationId: $data.applicationId,
                                           documentId: $data.id,
-                                          service: $root.taskDataService,
+                                          service: $root.dataService,
                                           authModel: lupapisteApp.models.applicationAuthModel,
                                           i18npath: [$data.schema.info.i18name || $data.schema.info.name]}}"></div>
     <!-- /ko -->
