--- a/resources/private/calendar-view/calendar-view.html
+++ b/resources/private/calendar-view/calendar-view.html
@@ -22,10 +22,13 @@
           <td>
             <div style="position: relative;">
               <!-- ko foreach: $parent.timelineTimes -->
-              <div class="timeline-slot"><span data-bind="text: $data"></span></div>
+              <div class="timeline-slot" data-bind="click: $root.clickHandler.bind($parent, 'timeline-slot', $data)">
+                <span data-bind="text: $data"></span>
+              </div>
               <!-- /ko -->
               <!-- ko foreach: slots -->
-              <div class="reserved-slot" data-bind="style: { top: positionTop, height: height }, text: viewText"></div>
+              <div class="reserved-slot" data-bind="click: $root.clickHandler.bind($parent, 'reserved-slot', $data),
+                                                    style: { top: positionTop, height: height }, text: viewText"></div>
               <!-- /ko -->
             </div>
           </td>
